--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "0.344.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "0.344.0",
     "recharts": "2.12.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.2.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "tailwindcss": "^4.2.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
