--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "recharts": "2.12.0"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.2.0",
